[gd_scene load_steps=10 format=3 uid="uid://c3safv2wtnqif"]

[ext_resource type="StyleBox" uid="uid://dyhjt06puyome" path="res://Styles/ButtonPressedGreen/button_pressed_green.tres" id="1_05wrt"]
[ext_resource type="Script" path="res://Scenes/Auth/auth_scene.gd" id="1_mu7kw"]
[ext_resource type="Texture2D" uid="uid://cohw37qj0a5oh" path="res://Assets/default_pfp.webp" id="2_vfbtu"]

[sub_resource type="Animation" id="Animation_l3hkt"]
resource_name = "Invalid_login_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Login:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Login/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.678431, 0, 0, 1), Color(0.678431, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_08mjx"]
resource_name = "Invalid_password_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Password:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Password/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.678431, 0, 0, 1), Color(0.678431, 0, 0, 1), Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3mda7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Password:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Password/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Login:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Login/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vp0oh"]
_data = {
"Invalid_login_animation": SubResource("Animation_l3hkt"),
"Invalid_password_animation": SubResource("Animation_08mjx"),
"RESET": SubResource("Animation_3mda7")
}

[sub_resource type="InputEventAction" id="InputEventAction_0mqfx"]
action = &"ui_accept"

[sub_resource type="Shortcut" id="Shortcut_047jw"]
events = [SubResource("InputEventAction_0mqfx")]

[node name="AuthScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mu7kw")

[node name="Background" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 1.0
offset_top = 50.0
offset_right = -2.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Simple Password Manager"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Greeting" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.001
anchor_right = 1.0
offset_left = -0.152
offset_top = 125.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Hello, username, please enter your login and password to proceed"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PFPHead" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = 203.0
offset_right = 21.0
offset_bottom = 258.0
grow_horizontal = 2

[node name="PFPBody" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -34.0
offset_top = 258.0
offset_right = 36.0
offset_bottom = 277.0
grow_horizontal = 2

[node name="PFPBackground" type="TextureRect" parent="."]
self_modulate = Color(0.207843, 0.207843, 0.207843, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.0
offset_top = 184.0
offset_right = 51.0
offset_bottom = 284.0
grow_horizontal = 2
texture = ExtResource("2_vfbtu")
expand_mode = 1

[node name="Login" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -135.0
offset_top = 316.0
offset_right = 137.0
offset_bottom = 358.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "Enter your login here"
alignment = 1
max_length = 25
expand_to_text_length = true

[node name="Label" type="Label" parent="Login"]
modulate = Color(1, 0, 0, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_right = 66.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 0
text = "User with this login does not exist"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Password" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -163.0
offset_top = 389.0
offset_right = 165.0
offset_bottom = 431.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
placeholder_text = "Enter your password here"
alignment = 1
max_length = 25
secret = true
expand_to_text_length = true

[node name="ChangeVisibilityButton" type="Button" parent="Password"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -13.0
offset_right = 34.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 12
theme_override_styles/pressed = ExtResource("1_05wrt")
toggle_mode = true
text = "üëÅÔ∏è "
text_overrun_behavior = 1

[node name="Label" type="Label" parent="Password"]
modulate = Color(1, 0, 0, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_right = 66.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 0
text = "Invalid password"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vp0oh")
}

[node name="LoginButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = 462.0
offset_right = 56.0
offset_bottom = 505.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
disabled = true
shortcut = SubResource("Shortcut_047jw")
text = "Log in"

[node name="ResetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -169.5
offset_top = -78.0
offset_right = -24.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Reset password"

[node name="CreateNewAccountButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 24.5
offset_top = -78.0
offset_right = 205.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "Create new account"

[node name="RememberMeCheckBox" type="CheckBox" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.5
offset_top = 507.0
offset_right = 71.5
offset_bottom = 538.0
grow_horizontal = 2
text = "Remember me"

[connection signal="text_changed" from="Password" to="." method="_on_password_text_changed"]
[connection signal="text_submitted" from="Password" to="." method="_on_password_text_submitted"]
[connection signal="focus_exited" from="Password/ChangeVisibilityButton" to="." method="_on_change_visibility_button_focus_exited"]
[connection signal="pressed" from="Password/ChangeVisibilityButton" to="." method="_on_change_visibility_button_pressed"]
[connection signal="pressed" from="LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="CreateNewAccountButton" to="." method="_on_create_new_account_button_pressed"]
